<resources>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Playback_failed">播放失败</string>
    <string name="TUIKirErrorSVRFriendAccountNotFoundEx">请求的用户帐号不存在。</string>
    <string name="TUIKitERRORSDKNetResetByPeer">对端重置了连接</string>
    <string name="TUIKitErrorAutoLoginNeedUserSig">自动登录，本地票据过期，需要userSig手动登录</string>
    <string name="TUIKitErrorBindFaildIsBinding">正在bind操作中</string>
    <string name="TUIKitErrorBindFaildRegTimeout">注册超时</string>
    <string name="TUIKitErrorCrossThread">跨线程错误</string>
    <string name="TUIKitErrorDatabaseOperateFailed">本地数据库操作失败</string>
    <string name="TUIKitErrorEmptyFile">空文件</string>
    <string name="TUIKitErrorExpiredSessionNode">SessionNode为null</string>
    <string name="TUIKitErrorFileNotFound">文件不存在</string>
    <string name="TUIKitErrorFileOpenFailed">文件打开失败</string>
    <string name="TUIKitErrorFileTooLarge">文件大小超出了限制</string>
    <string name="TUIKitErrorFileTransAuthFailed">文件传输鉴权失败</string>
    <string name="TUIKitErrorFileTransDownloadFailed">文件传输下载失败，请检查网络，或者文件、语音是否已经过期</string>
    <string name="TUIKitErrorFileTransNoServer">文件传输获取 Server 列表失败</string>
    <string name="TUIKitErrorFileTransUploadFailed">文件传输上传失败，请检查网络是否连接</string>
    <string name="TUIKitErrorFileTransUploadFailedNotImage">文件传输上传失败，请检查上传的图片是否能够正常打开</string>
    <string name="TUIKitErrorFriendshipProxyLocalCheckErr">proxy_manager请求参数，在本地检查不合法</string>
    <string name="TUIKitErrorFriendshipProxySyncedFail">proxy_manager同步失败</string>
    <string name="TUIKitErrorFriendshipProxySyncing">proxy_manager没有完成svr数据同步</string>
    <string name="TUIKitErrorGroupInvalidField">group assistant请求字段中包含非预设字段</string>
    <string name="TUIKitErrorGroupStoreageDisabled">group assistant群资料本地存储没有开启</string>
    <string name="TUIKitErrorHTTPRequestFailed">HTTP 请求失败</string>
    <string name="TUIKitErrorIOOperateFaild">操作本地 IO 错误</string>
    <string name="TUIKitErrorInProcess">执行中</string>
    <string name="TUIKitErrorInvalidConveration">会话无效</string>
    <string name="TUIKitErrorInvalidIdentifier">Identifier 非法</string>
    <string name="TUIKitErrorInvalidJson">错误的 JSON 格式</string>
    <string name="TUIKitErrorInvalidMsgElem">IM SDK 无效消息 elem</string>
    <string name="TUIKitErrorInvalidParameters">参数无效</string>
    <string name="TUIKitErrorInvalidSDKObject">无效的对象</string>
    <string name="TUIKitErrorLackUGExt">缺少UGC扩展包</string>
    <string name="TUIKitErrorLoadGrpInfoFailed">无法从存储中加载groupinfo</string>
    <string name="TUIKitErrorLoadMsgFailed">加载本地数据库操作失败</string>
    <string name="TUIKitErrorLoggedOutBeforeLoginFinished">在登录完成前进行了登出（在登录时返回）</string>
    <string name="TUIKitErrorLoginAuthFailed">账号认证失败（用户信息获取失败）</string>
    <string name="TUIKitErrorLoginKickedOffByOther">其他终端登录同一账号</string>
    <string name="TUIKitErrorLoginOpenMsgRspParseFailed">登录时OPENSTATSVC向OPENMSG上报状态时解析回包失败</string>
    <string name="TUIKitErrorLoginOpenMsgTimeout">登录时OPENSTATSVC向OPENMSG上报状态超时</string>
    <string name="TUIKitErrorLoginSigExpire">登录返回，票据过期</string>
    <string name="TUIKitErrorLoginTlsRspParseFailed">登录时TLS回包校验，包体长度错误</string>
    <string name="TUIKitErrorLoginTslDecryptFailed">登录时TLS解密失败</string>
    <string name="TUIKitErrorNeverConnectAfterLaunch">在应用启动后没有尝试联网</string>
    <string name="TUIKitErrorNoPreviousLogin">并没有登录过该用户</string>
    <string name="TUIKitErrorNotLogin">IM SDK 未登录</string>
    <string name="TUIKitErrorOpenBDHBase">openbdh 错误码</string>
    <string name="TUIKitErrorOutOfMemory">内存不足</string>
    <string name="TUIKitErrorPacketFailReqNoAuth">发送请求包时没有权限</string>
    <string name="TUIKitErrorPacketFailReqNoNet">发送请求包时没有网络,处理时转换成case ERR_REQ_NO_NET_ON_REQ:</string>
    <string name="TUIKitErrorPacketFailRespNoNet">发送回复包时没有网络,处理时转换成case ERR_REQ_NO_NET_ON_RSP:</string>
    <string name="TUIKitErrorPacketFailRespTimeout">回复超时</string>
    <string name="TUIKitErrorPacketFailSSOErr">SSO错误</string>
    <string name="TUIKitErrorPacketFailUnknown">发包未知错误</string>
    <string name="TUIKitErrorParseResponseFaild">PB 解析失败</string>
    <string name="TUIKitErrorQALNoShortConneAvailable">没有可用的短连接sso</string>
    <string name="TUIKitErrorReqContentAttach">消息内容安全打击</string>
    <string name="TUIKitErrorReqFailed">QAL执行失败</string>
    <string name="TUIKitErrorReqInvaidReq">请求非法，toMsgService非法</string>
    <string name="TUIKitErrorReqInvalidCookie">SSO cookie无效</string>
    <string name="TUIKitErrorReqInvalidSign">SSO签名错误</string>
    <string name="TUIKitErrorReqKickOff">已经被其他终端踢了</string>
    <string name="TUIKitErrorReqNoNetOnReq">请求的时候没有网络</string>
    <string name="TUIKitErrorReqNoNetOnResp">响应的时候没有网络</string>
    <string name="TUIKitErrorReqOnverLoaded">请求队列满</string>
    <string name="TUIKitErrorReqServiceSuspend">服务被暂停</string>
    <string name="TUIKitErrorRequestNoNetOnReq">请求时没有网络，请等网络恢复后重试</string>
    <string name="TUIKitErrorRequestNoNetOnRsp">响应时没有网络，请等网络恢复后重试</string>
    <string name="TUIKitErrorRequestOnverLoaded">请求队列満</string>
    <string name="TUIKitErrorSDKFriendShipInvalidProfileKey">资料字段非法</string>
    <string name="TUIKitErrorSDKFriendshipFriendGroupEmpty">好友分组字段非法，必须不为空，每个分组的名称最长30字节</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddRemark">备注字段非法，最大96字节</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddSource">请求添加好友的添加来源字段非法，来源需要添加“AddSource_Type_”前缀。</string>
    <string name="TUIKitErrorSDKFriendshipInvalidAddWording">请求添加好友的请求说明字段非法，最大120字节</string>
    <string name="TUIKitErrorSDKGroupInvalidFaceURL">群头像 URL 非法，群头像 URL 最长100字节</string>
    <string name="TUIKitErrorSDKGroupInvalidID">群组 ID 非法，自定义群组 ID 必须为可打印 ASCII 字符（0x20-0x7e），最长48个字节，且前缀不能为 @TGS#</string>
    <string name="TUIKitErrorSDKGroupInvalidIntroduction">群简介非法，群简介最长240字节</string>
    <string name="TUIKitErrorSDKGroupInvalidName">群名称非法，群名称最长30字节</string>
    <string name="TUIKitErrorSDKGroupInvalidNameCard">群名片非法，群名片最长50字节</string>
    <string name="TUIKitErrorSDKGroupInvalidNotification">群公告非法，群公告最长300字节</string>
    <string name="TUIKitErrorSDKGroupInviteNoMember">不允许邀请0个成员</string>
    <string name="TUIKitErrorSDKGroupInviteSuperDeny">不允许邀请角色为群主的成员</string>
    <string name="TUIKitErrorSDKGroupJoinPrivateGroupDeny">不允许申请加入 Private 群组</string>
    <string name="TUIKitErrorSDKGroupMemberCountLimit">超过群组成员数的限制</string>
    <string name="TUIKitErrorSDKHadInit">SDK 已经初始化无需重复初始化</string>
    <string name="TUIKitErrorSDKMsgKeyReqDifferRsp">消息 KEY 错误</string>
    <string name="TUIKitErrorSDKNetAllreadyConn">网络连接已建立，重复创建连接</string>
    <string name="TUIKitErrorSDKNetAuthInvalid">网络链接未完成鉴权</string>
    <string name="TUIKitErrorSDKNetCompressFailed">数据包压缩失败</string>
    <string name="TUIKitErrorSDKNetConnRefuse">网络连接已被拒绝，请求过于频繁，服务端拒绝服务。</string>
    <string name="TUIKitErrorSDKNetConnTimeout">建立网络连接超时，请等网络恢复后重试。</string>
    <string name="TUIKitErrorSDKNetConnectReset">网络连接到中间节点或服务端重置</string>
    <string name="TUIKitErrorSDKNetDecodeFailed">网络链接解密失败</string>
    <string name="TUIKitErrorSDKNetDisconnect">网络已断开，未建立连接，或者建立 socket 连接时，检测到无网络。</string>
    <string name="TUIKitErrorSDKNetEncodeFailed">网络链接加密失败</string>
    <string name="TUIKitErrorSDKNetFreqLimit">调用频率限制，最大每秒发起 5 次请求</string>
    <string name="TUIKitErrorSDKNetHostGetAddressFailed">IP 地址解析失败</string>
    <string name="TUIKitErrorSDKNetNetUnreach">没有到达网络的可用路由，请等网络恢复后重试。</string>
    <string name="TUIKitErrorSDKNetSOcketInvalid">socket 套接字无效</string>
    <string name="TUIKitErrorSDKNetSocketNoBuff">系统中没有足够的缓冲区空间资源可用来完成调用，系统过于繁忙，内部错误。</string>
    <string name="TUIKitErrorSDKNetUncompressFaile">数据包解压失败</string>
    <string name="TUIKitErrorSDKNetWaitAckTimeut">请求包已进入系统的网络 buffer ，等待服务端回包超时</string>
    <string name="TUIKitErrorSDKNetWaitInQueueTimeout">请求包等待进入待发送队列超时</string>
    <string name="TUIKitErrorSDKNetWaitSendTimeout">请求包已进入待发送队列，等待进入系统的网络 buffer 超时</string>
    <string name="TUIKitErrorSDKNotInit">IM SDK 未初始化</string>
    <string name="TUIKitErrorSDKSVRSSOConnectLimit">Server 的连接数量超出限制，服务端拒绝服务。</string>
    <string name="TUIKitErrorSDKSVRSSOVCode">验证码下发超时。</string>
    <string name="TUIKitErrorSDKnetReqCountLimit">请求队列満，超过同时请求的数量限制，最大同时发起1000个请求。</string>
    <string name="TUIKitErrorSVRA2DownInvalid">票据验证没通过或者被安全打击。请重新调用 TIMManager.getInstance().login 登录接口生成新的票据。</string>
    <string name="TUIKitErrorSVRA2UpInvalid">Ticket 过期。Ticket 是根据 UserSig 生成的内部票据，Ticket 的有效期小于或等于 UserSig 的有效期。请重新调用 TIMManager.getInstance().login 登录接口生成新的 Ticket。</string>
    <string name="TUIKitErrorSVRAccountAdminRequired">请求需要 App 管理员权限。</string>
    <string name="TUIKitErrorSVRAccountBlackList">帐号被拉入黑名单。</string>
    <string name="TUIKitErrorSVRAccountCountLimit">创建帐号数量超过免费体验版数量限制，请升级为专业版。</string>
    <string name="TUIKitErrorSVRAccountFreqLimit">因失败且重试次数过多导致被限制，请检查 UserSig 是否正确，一分钟之后再试。</string>
    <string name="TUIKitErrorSVRAccountInternalError">服务端内部错误，请重试。</string>
    <string name="TUIKitErrorSVRAccountInternalTimeout">服务端内部超时，请重试。</string>
    <string name="TUIKitErrorSVRAccountInvalidCount">请求中批量数量不合法。</string>
    <string name="TUIKitErrorSVRAccountInvalidUserSig">UserSig 已经失效，请重新生成，再次尝试。</string>
    <string name="TUIKitErrorSVRAccountNotFound">请求的用户帐号不存在。</string>
    <string name="TUIKitErrorSVRAccountSecRstr">安全原因被限制。</string>
    <string name="TUIKitErrorSVRAccountUserSigCheckFailed">UserSig 校验失败</string>
    <string name="card_detail_condition_1">流通品相</string>
    <string name="card_detail_condition_2">有瑕疵</string>
    <string name="card_detail_condition_3">有损伤</string>
    <string name="card_detail_condition_4">评级卡</string>
    <string name="common_add">添加</string>
    <string name="common_address_detail">详细地址：</string>
    <string name="common_adjust">调整</string>
    <string name="common_cancel">取消</string>
    <string name="common_cancel_order_ok">确定取消</string>
    <string name="common_contact">收件人：</string>
    <string name="common_cut">剪切</string>
    <string name="common_hint_address_detail">街道、楼牌号等</string>
    <string name="common_hint_name">请填写收货人姓名</string>
    <string name="common_hint_phone">请填写收件人手机号</string>
    <string name="common_hint_province_info">省市县区、乡镇等</string>
    <string name="common_phone_number">手机号码：</string>
    <string name="common_province_info">所在地区：</string>
    <string name="common_save">保存</string>
    <string name="common_send_cancel_order">申请取消订单</string>
    <string name="common_set_default_address">设置默认地址：</string>
    <string name="common_trace_rule">交易规范</string>
    <string name="me_child_notice">儿童个人信息保护及监护人须知</string>
    <string name="me_company_info">公司信息</string>
    <string name="me_condition_define">品相定义</string>
    <string name="me_cooperation_sharing">第三方合作个人信息共享</string>
    <string name="me_credit">集换信用</string>
    <string name="me_how_to_pack">如何包装</string>
    <string name="me_info_list">个人信息收集清单</string>
    <string name="me_normal_question">常见问题</string>
    <string name="me_privacy_policy">隐私政策</string>
    <string name="me_seller_money">卖家服务费</string>
    <string name="me_user_agreement">用户服务协议</string>
    <string name="photo">Take Photo</string>
    <string name="pic">Album</string>
    <string name="reason_back_good_1">快递一直未送到</string>
    <string name="reason_back_good_2">未按约定时间发货</string>
    <string name="reason_back_good_3">快递无跟踪记录</string>
    <string name="reason_back_good_4">其他原因</string>
    <string name="reason_buyer_cancel_1">我不想买了</string>
    <string name="reason_buyer_cancel_2">信息填写错误，重新拍</string>
    <string name="reason_buyer_cancel_3">卖家缺货</string>
    <string name="reason_buyer_cancel_4">面交/其他平台交易</string>
    <string name="reason_buyer_cancel_5">其他原因</string>
    <string name="reason_seller_cancel_1">我不想卖了</string>
    <string name="reason_seller_cancel_2">商品已售出</string>
    <string name="reason_seller_cancel_3">买家联系不上</string>
    <string name="reason_seller_cancel_4">与买家协商一致</string>
    <string name="reason_seller_cancel_5">其他原因</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="video">Record Video</string>
</resources>