<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:tag="layout/pop_condition_0" android:background="@drawable/bg_game_drop_bar" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:tag="binding_1" android:text="@string/card_detail_condition_1" style="@style/gameBarText"/>
    <TextView android:tag="binding_2" android:text="@string/card_detail_condition_2" style="@style/gameBarText"/>
    <TextView android:tag="binding_3" android:text="@string/card_detail_condition_3" style="@style/gameBarText"/>
    <TextView android:tag="binding_4" android:text="@string/card_detail_condition_4" style="@style/gameBarText"/>
</LinearLayout>
