<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/activity_help_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constrainedHeight="true" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_1" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/common_trace_rule"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_2" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_normal_question"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_3" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_seller_money"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_4" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_condition_define"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_5" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_how_to_pack"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_6" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_credit"/>
        </LinearLayout>
    </ScrollView>
    <View app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/ShadowStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
