<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/activity_about_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constrainedHeight="true" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_1" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/me_user_agreement"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_2" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_company_info"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_3" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_child_notice"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_4" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="9dp" android:text="@string/me_privacy_policy"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_5" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_info_list"/>
            <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center" android:tag="binding_6" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="1dp" android:text="@string/me_cooperation_sharing"/>
        </LinearLayout>
    </ScrollView>
    <View app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/ShadowStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
