<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/activity_add_address_0" android:paddingTop="7dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="7dp" android:paddingEnd="7dp">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_white_corner_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/contactTv" android:layout_width="0dp" android:layout_height="50dp" android:text="@string/common_contact" android:paddingStart="20dp" app:layout_constraintEnd_toStartOf="@+id/contactEt" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintHorizontal_weight="4" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <EditText android:textSize="12sp" android:textColor="@color/black" android:textColorHint="@color/black_b5b5b7" android:id="@+id/contactEt" android:tag="binding_1" android:background="@drawable/bg_back_icon" android:layout_width="0dp" android:layout_height="30dp" android:hint="@string/common_hint_name" android:singleLine="true" android:paddingStart="14dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="@+id/contactTv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_weight="10" app:layout_constraintStart_toEndOf="@+id/contactTv" app:layout_constraintTop_toTopOf="@+id/contactTv"/>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/phoneTv" android:layout_width="0dp" android:layout_height="50dp" android:text="@string/common_phone_number" android:paddingStart="20dp" app:layout_constraintEnd_toEndOf="@+id/contactTv" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/contactTv"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/phoneLayout" android:layout_width="0dp" android:layout_height="30dp" app:layout_constraintBottom_toBottomOf="@+id/phoneTv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_weight="10" app:layout_constraintStart_toEndOf="@+id/phoneTv" app:layout_constraintTop_toTopOf="@+id/phoneTv">
            <TextView android:gravity="center" android:id="@+id/chosen" android:tag="binding_2" android:background="@drawable/bg_game_bar" android:visibility="gone" android:layout_width="69dp" android:layout_height="match_parent" android:includeFontPadding="false" android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_12"/>
            <EditText android:textSize="12sp" android:textColor="@color/black" android:textColorHint="@color/black_b5b5b7" android:id="@+id/phoneEt" android:tag="binding_3" android:background="@drawable/bg_back_icon" android:layout_width="0dp" android:layout_height="30dp" android:hint="@string/common_hint_phone" android:singleLine="true" android:layout_weight="1" android:paddingStart="14dp" android:layout_marginEnd="20dp"/>
        </LinearLayout>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/provinceTv" android:layout_width="0dp" android:layout_height="50dp" android:text="@string/common_province_info" android:paddingStart="20dp" app:layout_constraintEnd_toEndOf="@+id/contactTv" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/phoneTv"/>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:textColorHint="@color/black_b5b5b7" android:gravity="center_vertical" android:id="@+id/provinceEt" android:tag="binding_4" android:background="@drawable/bg_back_icon" android:layout_width="0dp" android:layout_height="30dp" android:hint="@string/common_hint_province_info" android:singleLine="true" android:paddingStart="14dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="@+id/provinceTv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_weight="7" app:layout_constraintStart_toEndOf="@+id/provinceTv" app:layout_constraintTop_toTopOf="@+id/provinceTv"/>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/addressTv" android:layout_width="0dp" android:layout_height="50dp" android:text="@string/common_address_detail" android:paddingStart="20dp" app:layout_constraintEnd_toEndOf="@+id/contactTv" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintHorizontal_weight="2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/provinceTv"/>
        <EditText android:textSize="12sp" android:textColor="@color/black" android:textColorHint="@color/black_b5b5b7" android:id="@+id/addressEt" android:tag="binding_5" android:background="@drawable/bg_back_icon" android:layout_width="0dp" android:layout_height="30dp" android:hint="@string/common_hint_address_detail" android:singleLine="true" android:paddingStart="14dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="@+id/addressTv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_weight="7" app:layout_constraintStart_toEndOf="@+id/addressTv" app:layout_constraintTop_toTopOf="@+id/addressTv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_white_corner_10" android:layout_width="match_parent" android:layout_height="63dp" android:layout_marginTop="7dp">
        <TextView android:textSize="12sp" android:textColor="@color/black" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/common_set_default_address" android:layout_weight="1" android:paddingStart="20dp"/>
        <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/btnSwitch" android:layout_width="wrap_content" android:layout_height="22dp" android:layout_marginEnd="20dp"/>
    </LinearLayout>
    <View android:layout_width="wrap_content" android:layout_height="0dp" android:layout_weight="1"/>
    <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/saveBtn" android:tag="binding_6" android:background="@drawable/bg_big_btn" android:layout_width="160dp" android:layout_height="@dimen/bottom_btn_height" android:layout_marginBottom="40dp" android:text="@string/common_save" app:backgroundTint="@color/selector_enable_btn" app:cornerRadius="24dp"/>
</LinearLayout>
